# src/main/resources/openapi.yaml
@@ -47,12 +47,61 @@ paths:
   /search:
     get:
       summary: search in articles
-      description: ''
-      parameters: []
+      description: 'Search article by keyword(s)'
       operationId: doSearch
+      parameters:
+        - in: query
+          name: query
+          required: true
+          schema:
+            type: string
+          allowReserved: true
+          description: keyword(s) to search
+        - in: query
+          name: offset
+          schema:
+            type: integer
+          description: The number of items to skip before starting to collect the result set
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: The numbers of items to return
+        - in: query
+          name: orderby
+          schema:
+            type: string
+            enum: ["price", "date"]
+          description: Ordering result by criteria
+        - in: query
+          name: order
+          schema:
+            type: string
+            enum: ["asc", "desc"]
+          description: Ordering result
       responses:
-        default:
+        200:
           description: Default response
+          content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    keywords:
+                      type: string
+                    limit:
+                      type: integer
+                    offset:
+                      type: integer
+                    totalResult:
+                      type: integer
+                    result:
+                      type: array
+                      items:
+                        $ref: '#/components/schemas/Article'
+                    #orderBy:
+                    #    type: string
+                    #    optional: true
       tags:
         - article
   /oauth2/token:
